--- a/projects/hacc2020.md
+++ b/projects/hacc2020.md
@@ -1,7 +1,7 @@
 ---
 layout: project
 type: project
-image: images/roombrah-square.png
+image: images/hacc2020.png
 title: Hawai'i Annual Coding Challenge (HACC)
 permalink: projects/hacc2020
 # All dates must be YYYY-MM-DD format!
