--- a/projects/hacc2020.md
+++ b/projects/hacc2020.md
@@ -12,7 +12,7 @@ labels:
 summary: A project based on the mechanics of a roomba which I created in my first ICS Class.
 ---
 
-<img class="ui huge middle image" src="../images/roombrah.png">
+<img class="ui huge middle image" src="../images/hacc2020.png">
 
 I replicated the mechanics of a roomba vacuum cleaner for a project in my ICS 111 class at the University of Hawai'i at Manoa. For those of you who do not know, a roomba is a robotic vacuum cleaner that moves in a straight line until it hits an object/wall, where it then "bounces" into a different direction. The goal of the project is for the roomba to collect all the dust and then display an end screen when finished. I, however, based my project off Pokemon, where the roomba is a pokeball, and the dust particles to be collected are pokemon. 
 
