--- a/projects/hacc2020.md
+++ b/projects/hacc2020.md
@@ -9,12 +9,14 @@ date: 2020-12-05
 labels:
   - React Native
   - Firebase
-summary: A project based on the mechanics of a roomba which I created in my first ICS Class.
+summary: Experiencing an official programming challenge for the first time as a part of Team HACCsgiving.
 ---
 
 <img class="ui huge middle image" src="../images/hacc2020.png">
 
-I replicated the mechanics of a roomba vacuum cleaner for a project in my ICS 111 class at the University of Hawai'i at Manoa. For those of you who do not know, a roomba is a robotic vacuum cleaner that moves in a straight line until it hits an object/wall, where it then "bounces" into a different direction. The goal of the project is for the roomba to collect all the dust and then display an end screen when finished. I, however, based my project off Pokemon, where the roomba is a pokeball, and the dust particles to be collected are pokemon. 
+The Hawaii Annual Coding Challenge (HACC), which was created by Gov. David Ige in 2015, is a hackathon that encouraged modernizing state functions and services in order to create a more effective and efficient government. Since HACC is a multi-week competition, prolonged interaction between participating teams provides an opportunity to create sustainable solutions. I was a part of Team HACCSgiving (due to HACC occuring during Thanksgiving) along with Graham Francisco, Calvan Liang, Kegan Flagg, and Chris Na, and decided to tackle the challenge provided by First Lady Dawn Amano-Ige, which was titled Connections: Hawai'i State Resource Directory.
+
+we created an app called Helping Hands, which attempts to 
 
 First, a text file will be scanned which will contain all the walls and pokemon(Diglett) to be collected. The pokeball will move diagonally around the map, bounce off the wall, and also leave a trail. Once all the Digletts are collected, the Hall of Fame screen will play.
 
