--- a/projects/hacc2020.md
+++ b/projects/hacc2020.md
@@ -14,9 +14,9 @@ summary: Experiencing an official programming challenge for the first time as a 
 
 <img class="ui huge middle image" src="../images/hacc2020.png">
 
-The Hawaii Annual Coding Challenge (HACC), which was created by Gov. David Ige in 2015, is a hackathon that encouraged modernizing state functions and services in order to create a more effective and efficient government. Since HACC is a multi-week competition, prolonged interaction between participating teams provides an opportunity to create sustainable solutions. I was a part of Team HACCSgiving (due to HACC occuring during Thanksgiving) along with Graham Francisco, Calvan Liang, Kegan Flagg, and Chris Na, and decided to tackle the challenge provided by First Lady Dawn Amano-Ige, which was titled Connections: Hawai'i State Resource Directory.
+The Hawaii Annual Coding Challenge (HACC), which was created by Gov. David Ige in 2015, is a hackathon that encouraged modernizing state functions and services in order to create a more effective and efficient government. Since HACC is a multi-week competition, prolonged interaction between participating teams provides an opportunity to create sustainable solutions. I was a part of Team HACCSgiving along with Graham Francisco, Calvan Liang, Kegan Flagg, and Chris Na, and decided to tackle the challenge provided by First Lady Dawn Amano-Ige, which was titled Connections: Hawai'i State Resource Directory.
 
-we created an app called Helping Hands, which attempts to 
+For this challenge, we were tasked to create an app that could provide various programs and services from statewide government agencies and nonprofit agencies in a user-friendly “one-stop-shop" directory making it easier for those needing support services and referrals.Helping Hands, which attempts to 
 
 First, a text file will be scanned which will contain all the walls and pokemon(Diglett) to be collected. The pokeball will move diagonally around the map, bounce off the wall, and also leave a trail. Once all the Digletts are collected, the Hall of Fame screen will play.
 
@@ -27,38 +27,10 @@ The first is the mechanics for the movement of the pokeball. Unfortunately, the 
 The second is to make the Diglett disappear when the pokeball touches it. First, it gets the position of the pokeball and then iterates through a for loop to check if the pokeball is touching the Diglett, and if it is, it will move the Diglett to a position where it can no longer be seen.
 
 This is the code to check if the Diglett has been touched:
-```js
-public static void isDiglettCaught(EZImage pokeBall) { // function for when pokeball touches diglett
-		int xCoord = pokeBall.getXCenter();
-		int yCoord = pokeBall.getYCenter();
-		for(int i = 0; i < 7; i++) {
-			if(digletts[i].isPointInElement(xCoord, yCoord)) {
-				digletts[i].translateTo(0,0);
-				diglettCaught.play();
-			}
 
-		}
-	}
-
-```
 
 Another important mechanic is to play the Hall of Fame screen when all the Digletts are caught. First it gets the position of the pokeball and then checks if the final Diglett is touched by the pokeball. When the final Diglett is caught, it will show the Hall of Fame screen and also play the victory music via EZ Graphics.
 
-This is the code to play the end screen:
-```js
-public static void endGame(EZImage pokeBall) { // function for when last diglett is touched
-		int xCoord = pokeBall.getXCenter();
-		int yCoord = pokeBall.getYCenter();
-		if(digletts[7].isPointInElement(xCoord, yCoord)) {
-			digletts[7].translateTo(0,0);
-			EZImage hallOfFame = EZ.addImage("halloffame.png", 465, 250);
-			bgm.stop();
-			allDiglettCaught.play();
-			m++;
-		}
-	}
-
-```
 A video of my project in action can be seen <a href="https://www.youtube.com/watch?v=gKN1nsJKSAk">here</a>.
 
 The game was created using Java and <a href="http://www2.hawaii.edu/~dylank/ics111/">EZ Graphics</a>, which is a "multimedia library designed to make it easier for novice programmers to quickly build Java applications that incorporate graphics and sound". 
