--- a/projects/hacc2020.md
+++ b/projects/hacc2020.md
@@ -16,7 +16,9 @@ summary: Experiencing an official programming challenge for the first time as a 
 
 The Hawaii Annual Coding Challenge (HACC), which was created by Gov. David Ige in 2015, is a hackathon that encouraged modernizing state functions and services in order to create a more effective and efficient government. Since HACC is a multi-week competition, prolonged interaction between participating teams provides an opportunity to create sustainable solutions. I was a part of Team HACCSgiving along with Graham Francisco, Calvan Liang, Kegan Flagg, and Chris Na, and decided to tackle the challenge provided by First Lady Dawn Amano-Ige, which was titled Connections: Hawai'i State Resource Directory.
 
-For this challenge, we were tasked to create an app that could provide various programs and services from statewide government agencies and nonprofit agencies in a user-friendly “one-stop-shop" directory making it easier for those needing support services and referrals.Helping Hands, which attempts to 
+For this challenge, we were tasked to create an app that could provide various programs and services from statewide government agencies and nonprofit agencies in a user-friendly “one-stop-shop" directory, making it easier for those needing support services and referrals. The app we created is called Helping Hands, which attempts to hold the user's hand and provide the relevant resources so that they can keep up-to-date with their current concerns. A demonstration of our app is shown below:
+
+https://youtu.be/pmVGrtbvdLk
 
 First, a text file will be scanned which will contain all the walls and pokemon(Diglett) to be collected. The pokeball will move diagonally around the map, bounce off the wall, and also leave a trail. Once all the Digletts are collected, the Hall of Fame screen will play.
 
