--- a/projects/hacc2020.md
+++ b/projects/hacc2020.md
@@ -18,7 +18,7 @@ The Hawaii Annual Coding Challenge (HACC), which was created by Gov. David Ige i
 
 For this challenge, we were tasked to create an app that could provide various programs and services from statewide government agencies and nonprofit agencies in a user-friendly “one-stop-shop" directory, making it easier for those needing support services and referrals. The app we created is called Helping Hands, which attempts to hold the user's hand and provide the relevant resources so that they can keep up-to-date with their current concerns. A demonstration of our app is shown below:
 
-https://youtu.be/pmVGrtbvdLk
+<iframe width="560" height="315" src="https://www.youtube.com/embed/pmVGrtbvdLk" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 First, a text file will be scanned which will contain all the walls and pokemon(Diglett) to be collected. The pokeball will move diagonally around the map, bounce off the wall, and also leave a trail. Once all the Digletts are collected, the Hall of Fame screen will play.
 
