--- a/projects/hacc2020.md
+++ b/projects/hacc2020.md
@@ -14,27 +14,8 @@ summary: Experiencing an official programming challenge for the first time as a 
 
 <img class="ui huge middle image" src="../images/hacc2020.png">
 
-The Hawaii Annual Coding Challenge (HACC), which was created by Gov. David Ige in 2015, is a hackathon that encouraged modernizing state functions and services in order to create a more effective and efficient government. Since HACC is a multi-week competition, prolonged interaction between participating teams provides an opportunity to create sustainable solutions. I was a part of Team HACCSgiving along with Graham Francisco, Calvan Liang, Kegan Flagg, and Chris Na, and decided to tackle the challenge provided by First Lady Dawn Amano-Ige, which was titled Connections: Hawai'i State Resource Directory.
+The Hawaii Annual Coding Challenge (HACC), which was created by Gov. David Ige in 2015, is a hackathon that encouraged modernizing state functions and services in order to create a more effective and efficient government. Since HACC is a multi-week competition, prolonged interaction between participating teams provides an opportunity to create sustainable solutions. More information about HACC can be found <a href="https://hacc.hawaii.gov/">here</a>. I was a part of Team HACCSgiving along with Graham Francisco, Calvan Liang, Kegan Flagg, and Chris Na, and decided to tackle the challenge provided by First Lady Dawn Amano-Ige, which was titled Connections: Hawai'i State Resource Directory.
 
 For this challenge, we were tasked to create an app that could provide various programs and services from statewide government agencies and nonprofit agencies in a user-friendly “one-stop-shop" directory, making it easier for those needing support services and referrals. The app we created is called Helping Hands, which attempts to hold the user's hand and provide the relevant resources so that they can keep up-to-date with their current concerns. A demonstration of our app is shown below:
 
 <iframe width="690" height="445" src="https://www.youtube.com/embed/pmVGrtbvdLk" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-
-First, a text file will be scanned which will contain all the walls and pokemon(Diglett) to be collected. The pokeball will move diagonally around the map, bounce off the wall, and also leave a trail. Once all the Digletts are collected, the Hall of Fame screen will play.
-
-Within the project, there were two key mechanics that established the foundation of my project.
-
-The first is the mechanics for the movement of the pokeball. Unfortunately, the code for the mechanics of the pokeball movement is quite lengthy so will not be showing it.
-
-The second is to make the Diglett disappear when the pokeball touches it. First, it gets the position of the pokeball and then iterates through a for loop to check if the pokeball is touching the Diglett, and if it is, it will move the Diglett to a position where it can no longer be seen.
-
-This is the code to check if the Diglett has been touched:
-
-
-Another important mechanic is to play the Hall of Fame screen when all the Digletts are caught. First it gets the position of the pokeball and then checks if the final Diglett is touched by the pokeball. When the final Diglett is caught, it will show the Hall of Fame screen and also play the victory music via EZ Graphics.
-
-A video of my project in action can be seen <a href="https://www.youtube.com/watch?v=gKN1nsJKSAk">here</a>.
-
-The game was created using Java and <a href="http://www2.hawaii.edu/~dylank/ics111/">EZ Graphics</a>, which is a "multimedia library designed to make it easier for novice programmers to quickly build Java applications that incorporate graphics and sound". 
-
-In this project I gained experience with array lists, file reading/parsing, file writing, 2D arrays, and private/public member variables/functions all within the scope of Java. 
