--- a/projects/hacc2020.md
+++ b/projects/hacc2020.md
@@ -22,3 +22,7 @@ For this challenge, we were tasked to create an app that could provide various p
 
 
 Rather than clicking through multiple links, on Google for example, and getting bombarded by heaps of irrelevant information on each website, we knew that it would not only be a complete time-saver, but also reduce the stress of our users by avoiding this common theme throughout search engines. Although it is possible for agencies to set up a summary of their service under corresponding search results, they are either too short to understand the purpose of their program or sometimes cut off, which forces the user to enter the site. We found that the best way to combat this was to create Cards for each program that provides a reasonable summary of the service...
+
+Sources:
+ - <a href="https://github.com/HACC2020/HACCsgiving">GitHub</a>
+ - <a href="https://devpost.com/software/helping-hands-o96srp">DevPost</a>
