--- a/projects/hacc2020.md
+++ b/projects/hacc2020.md
@@ -14,14 +14,15 @@ summary: Experiencing an official programming challenge for the first time as a 
 
 <img class="ui huge middle image" src="../images/hacc2020.png">
 
-The Hawaii Annual Coding Challenge (HACC), which was created by Gov. David Ige in 2015, is a hackathon that encouraged modernizing state functions and services in order to create a more effective and efficient government. Since HACC is a multi-week competition, prolonged interaction between participating teams provides an opportunity to create sustainable solutions. More information about HACC can be found <a href="https://hacc.hawaii.gov/">here</a>. I was a part of **Team HACCSgiving** along with Graham Francisco, Calvan Liang, Kegan Flagg, and Chris Na, and decided to tackle the challenge provided by First Lady Dawn Amano-Ige, which was titled Connections: Hawai'i State Resource Directory.
+The Hawaii Annual Coding Challenge (HACC), which was created by Gov. David Ige in 2015, is a hackathon that encouraged modernizing state functions and services in order to create a more effective and efficient government. Since HACC is a multi-week competition, prolonged interaction between participating teams provides an opportunity to create sustainable solutions. More information about HACC can be found <a href="https://hacc.hawaii.gov/">here</a>. I was a part of **Team HACCSgiving** along with Graham Francisco, Calvan Liang, Kegan Flagg, and Chris Na, and decided to tackle the challenge provided by First Lady Dawn Amano-Ige, which was titled Connections: Hawai'i State Resource Directory. Further information about the challenge can be found <a href="https://hacc.hawaii.gov/wp-content/uploads/2020/10/Challenge_2020_ResourceDirectory.pdf">here</a>.
 
 For this challenge, we were tasked to create an app that could provide various programs and services from statewide government agencies and nonprofit agencies in a user-friendly “one-stop-shop" directory, making it easier for those needing support services and referrals. The app we created is called **Helping Hands**, which attempts to hold the user's hand and provide the relevant resources so that they can keep up-to-date with their current concerns. Before breaking down the core features of our app, a demonstration of our app is shown below to help users understand what Helping Hands is all about.
 
 <iframe width="690" height="445" src="https://www.youtube.com/embed/pmVGrtbvdLk" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
+Rather than clicking through multiple links, on Google for example, and getting bombarded by heaps of irrelevant information on each website, we knew that it would not only be a complete time-saver, but also reduce the stress of our users by avoiding this common theme throughout search engines. Although it is possible for agencies to set up a summary of their service under corresponding search results, they are either too short to understand the purpose of their program or sometimes cut off, which forces the user to enter the site. We found that the best way to combat this was to create Cards for each program that provides a reasonable summary of the service, giving users an opportunity to visit the site if they think it's what they are looking for, or they can easily return to the list of services.
 
-Rather than clicking through multiple links, on Google for example, and getting bombarded by heaps of irrelevant information on each website, we knew that it would not only be a complete time-saver, but also reduce the stress of our users by avoiding this common theme throughout search engines. Although it is possible for agencies to set up a summary of their service under corresponding search results, they are either too short to understand the purpose of their program or sometimes cut off, which forces the user to enter the site. We found that the best way to combat this was to create Cards for each program that provides a reasonable summary of the service...
+Especially during a pandemic, we understood the importance of speed when it comes to relaying information, because a lack of information could result in very dire consequences. Helping Hands is meant to be simple enough for the average user, but incorporate creative and innovative aspects so that we don't fall behind competitors.
 
 Sources:
  - <a href="https://github.com/HACC2020/HACCsgiving">GitHub</a>
