--- a/projects/hacc2020.md
+++ b/projects/hacc2020.md
@@ -22,11 +22,15 @@ For this challenge, we were tasked to create an app that could provide various p
 
 Rather than clicking through multiple links, on Google for example, and getting bombarded by heaps of irrelevant information on each website, we knew that it would not only be a complete time-saver, but also reduce the stress of our users by avoiding this common theme throughout search engines. Although it is possible for agencies to set up a summary of their service under corresponding search results, they are either too short to understand the purpose of their program or sometimes cut off, which forces the user to enter the site. We found that the best way to combat this was to create Cards for each program that provides a reasonable summary of the service, giving users an opportunity to visit the site if they think it's what they are looking for, or they can easily return to the list of services.
 
-<img class="ui medium middle image" src="../images/hh_card.PNG">
+<p align="center">
+  <img class="ui medium middle image" src="../images/hh_card.PNG">
+</p>
 
 Especially during a pandemic, we understood the importance of speed when it comes to relaying information, because a lack of information could result in very dire consequences. Helping Hands is meant to be simple enough for the average user, but incorporate creative and innovative aspects so that we don't fall behind competitors. As the list of services increase, scrolling through endless pages will be too time-consuming, which is why we also included a Search function, to narrow the results and consequently help users find the help they need as quick as possible.
 
+<p align="center">
 <img class="ui medium middle image" src="../images/hh_search.PNG">
+</p>
 
 worked with team over discord, talk about firebase + react native
 
