--- a/projects/hacc2020.md
+++ b/projects/hacc2020.md
@@ -20,26 +20,25 @@ For this challenge, we were tasked to create an app that could provide various p
 
 <iframe width="690" height="445" src="https://www.youtube.com/embed/pmVGrtbvdLk" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
-Rather than clicking through multiple links, on Google for example, and getting bombarded by heaps of irrelevant information on each website, we knew that it would not only be a complete time-saver, but also reduce the stress of our users by avoiding this common theme throughout search engines. Although it is possible for agencies to set up a summary of their service under corresponding search results, they are either too short to understand the purpose of their program or sometimes cut off, which forces the user to enter the site. We found that the best way to combat this was to create Cards for each program that provides a reasonable summary of the service, giving users an opportunity to visit the site if they think it's what they are looking for, or they can easily return to the list of services.
+Rather than clicking through multiple links, on Google for example, and getting bombarded by heaps of irrelevant information on each website, we knew that it would not only be a complete time-saver, but also reduce the stress of our users by avoiding this common theme throughout search engines. Although it is possible for agencies to set up a summary of their service under corresponding search results, they are either too short to understand the purpose of their program or sometimes cut off, which forces the user to enter the site. We found that the best way to combat this was to create Cards for each program that provides a reasonable summary of the service, giving users an opportunity to visit the site if they think it's what they are looking for, or they can easily return to the list of services. An example of a Service Card is shown below.
 
 <p align="center">
   <img class="ui medium image" src="../images/hh_card.PNG">
 </p>
 
-Especially during a pandemic, we understood the importance of speed when it comes to relaying information, because a lack of information could result in very dire consequences. Helping Hands is meant to be simple enough for the average user, but incorporate creative and innovative aspects so that we don't fall behind competitors. As the list of services increase, scrolling through endless pages will be too time-consuming, which is why we also included a Search function, to narrow the results and consequently help users find the help they need as quick as possible.
+Especially during a pandemic, we understood the importance of speed when it comes to relaying information, because a lack of information could result in very dire consequences. Helping Hands is meant to be simple enough for the average user, but incorporate creative and innovative aspects so that we don't fall behind competitors. As the list of services increase, scrolling through endless pages will be too time-consuming, which is why we also included a Search function, to narrow the results and consequently help users find the help they need as quick as possible. The New Search page is shown below, which shows all the available services on the app, but will filter accordingly as the user begins to type in the search bar.
 
 <p align="center">
   <img class="ui medium image" src="../images/hh_search.PNG">
 </p>
 
-worked with team over discord, talk about firebase + react native
+Helping Hands was built entirely with React Native and Firebase, which are some of the most popular frameworks and backend services for mobile applications, respectively.
 
 my contribution, firestore/buttons/styling/devpost/videos
 
 main problems i ran into -macbook dying on me
 
-fortunately, were able to complete everything on time and learned a lot along the way
-
+Despite social distancing restrictions, our team was able to work quite well together thanks to Discord. There were a few times where we had to spend all night in the voice chat trying to get everything to work, we were satisfied with our final product and even thought that we might be able to finish in the Top 3. Although we did not place as high as we wanted, we were all able to improve not only our skillset, from Firebase to React Native, but also our abilities to work in team settings.
 
 
 Sources:
