--- a/projects/hacc2020.md
+++ b/projects/hacc2020.md
@@ -34,6 +34,8 @@ Especially during a pandemic, we understood the importance of speed when it come
 
 Helping Hands was built entirely with React Native and Firebase, which are some of the most popular frameworks and backend services for mobile applications, respectively.
 
+One of the biggest challenges during HACC occurred around the middle of the event, where my computer suddenly shut off while working. Although I was not able to commit any of my work to GitHub before it shutdown, I was not too worried because my work should've automatically saved. However, my computer would not turn back on, and unfortunately has still not turned back on to the day that this is being written. On top of the stress from school and personal matters, this event made me unmotivated to move forward, but after some time had passed, I was able to bring
+
 my contribution, firestore/buttons/styling/devpost/videos
 
 main problems i ran into -macbook dying on me
