--- a/projects/hacc2020.md
+++ b/projects/hacc2020.md
@@ -32,12 +32,11 @@ Especially during a pandemic, we understood the importance of speed when it come
   <img class="ui medium image" src="../images/hh_search.PNG">
 </p>
 
-Helping Hands was built entirely with React Native and Firebase, which are some of the most popular frameworks and backend services for mobile applications, respectively. The entire team was relatively new to both
+Helping Hands was built entirely with React Native and Firebase, which are some of the most popular frameworks and backend services for mobile applications, respectively. The entire team was relatively new to both of the languages but since we all were familiar with JavaScript and React, we were successfully able to learn enough to create a fully functional application. Although I mainly worked on the front-end, I forced myself to learn more about the Firebase back-end because I did not have as much experience as I wanted to.
 
-One of the biggest challenges during HACC occurred around the middle of the event, where my computer suddenly shut off while working. Although I was not able to commit any of my work to GitHub before it shutdown, I was not too worried because my work should've automatically saved. However, my computer would not turn back on, and unfortunately has still not turned back on to the day that this is being written. On top of the stress from school and personal matters, this event made me unmotivated to move forward, but after some time had passed, I was able to bring
+One of the biggest challenges during HACC occurred around the middle of the event, where my computer suddenly shut off while working. Although I was not able to commit any of my work to GitHub before it shutdown, I was not too worried because my work should've automatically saved. However, my computer would not turn back on, and unfortunately has still not turned back on to the day that this is being written. On top of the stress from school and personal matters, this matter made me unmotivated to move forward, but after some time had passed, I was able to bring myself together and help the team out as best as I could. I worked closely with Graham Francisco and Calvan Liang on the front-end, while Kegan Flagg and Chris Na worked mainly on the back-end. I also made sure that we were prepared for the submission, by creating a demonstration video and filling out necessary details within the DevPost.
 
-Despite social distancing restrictions, our team was able to work quite well together thanks to Discord. There were a few times where we had to spend all night in the voice chat trying to get everything to work, we were satisfied with our final product and even thought that we might be able to finish in the Top 3. Although we did not place as high as we wanted, we were all able to improve not only our skillset, from Firebase to React Native, but also our abilities to work in team settings.
-
+Despite social distancing restrictions, our team was able to work quite well together thanks to Discord. There were a few times where we had to spend all night in the voice chat trying to get everything to work, but we were satisfied with our final product and even thought that we might be able to finish in the Top 3. Although we did not place as high as we wanted, we were all able to improve not only our skillset, from Firebase to React Native, but also our abilities to work in team settings.
 
 Sources:
  - <a href="https://github.com/HACC2020/HACCsgiving">GitHub</a>
