--- a/projects/hacc2020.md
+++ b/projects/hacc2020.md
@@ -38,7 +38,7 @@ One of the biggest challenges during HACC occurred around the middle of the even
 
 Despite social distancing restrictions, our team was able to work quite well together thanks to Discord. There were a few times where we had to spend all night in the voice chat trying to get everything to work, but we were satisfied with our final product and even thought that we might be able to finish in the Top 3. Although we did not place as high as we wanted, we were all able to improve not only our skillset, from Firebase to React Native, but also our abilities to work in team settings.
 
-As a first-time participant of HACC, I can say without question that the entire event is a great experience for future software engineers and helped me further understand the importance of a solid plan prior to working. Kegan Flagg created a mockup that that helped the entire team not only figure out the direction we wanted to take the app, but also helped divide roles for maximum efficiency. I also found that having powerful hardware while working is quite important, although it may not be accessible to everyone. For example, setting up the developer environment to work on a slow computer was an extreme hassle, and would sometimes take longer than 10 minutes just to start up the mobile simulator. Having a solid workstation can help you focus and reduce stress, which effectively should aid in creating higher quality code. 
+As a first-time participant of HACC, I can say without question that the entire event is a great experience for future software engineers and helped me further understand the importance of a solid plan prior to working. Kegan Flagg created a mockup that that helped the entire team not only figure out the direction we wanted to take the app, but also helped divide roles for maximum efficiency. I also found that having powerful hardware while working is quite important, although it may not be accessible to everyone. For example, setting up the developer environment to work on a slow computer was an extreme hassle, and would sometimes take longer than 10 minutes just to start up the mobile simulator. Having a solid workstation can help you focus and reduce stress, which effectively should aid in creating higher quality code. I am thankful to have been able to participate in HACC, which I might never have been able to if I had not enrolled in ICS 491 at UH Manoa. 
 
 Sources:
  - <a href="https://github.com/HACC2020/HACCsgiving">GitHub</a>
